Fix some misalignments on project show

--- a/app/assets/stylesheets/_projectshow.scss
+++ b/app/assets/stylesheets/_projectshow.scss
@@ -51,6 +51,8 @@
   }
 }
 .contributors-column {
+  padding-left: 1.85em;
+
   .font-large {
     font-size: 2.5em;
     font-weight: 300;
